# HashCrack

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  GETTING_STARTED.md  LICENSE  README.md  SIMPLE_ARCHITECTURE.md  SIMPLE_DEPLOY.md  config.js  deploy.bat  deploy.sh  docker-compose.yml  enhanced_web_interface.py  hashcrack.py  index.html  plan.md  progress_tracker.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_web.py  setup.py  team_wordlists.py  web_interface.py  wordlist_manager.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci-cd.yml  deploy.yml
backend/: .env.example  .gitignore  CONTRIBUTING.md  README.md  main.py  team_api.py  test_team_api.py
css/: style.css
frontend/: config.js  index.html
frontend/css/: style.css
frontend/js/: app.js  client-cracker.js  offline.js  p2p.js  websocket.js
frontend/wordlists/: common.txt  enhanced.txt
hashcrack/: __init__.py  engine.py  progress_tracker.py  wordlist_manager.py
js/: app.js  hash-cracker.js  offline.js
simple_backend/: app.py  render.yaml  requirements.txt
wordlists/: common.txt
